[tool.poetry]
name = "test-api"
version = "0.1.0"
description = ""
authors = ["noskriptt <maryaskin.a.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
environs = "^10.0.0"
apispec = "^6.3.0"
marshmallow = "^3.20.1"
apispec-webframeworks = "^0.5.2"
flask-restplus = "^0.13.0"
flask-swagger-ui = "^4.11.1"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
flake8 = "^6.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
